<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">baby_more</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_song_name">请输入歌曲名……</string>
    <string name="login_k">登录宝宝K歌，惊喜无限！</string>
    <string name="login">登录</string>
    <string name="loginuser">账号：</string>
    <string name="message">我的消息</string>
    <string name="mymessage">我的消息</string>
    <string name="my_k">我的K歌</string>
    <string name="repassword">密码：</string>
    <string name="login_password">密码：</string>
    <string name="local_music">本地音乐</string>
    <string name="download_managment">下载管理</string>
    <string name="shere">分享</string>
    <string name="content_back">意见反馈</string>
    <string name="help">帮助</string>
    <string name="setting">设置</string>
    <string name="exit">退出程序</string>
    <string name="sing_accompany">本地伴奏（免流量）</string>
    <string name="sing_oratorio">卖力清唱</string>
    <string name="k_cancel">取消</string>
    <string name="register">新用户注册</string>
    <string name="reregister">注册</string>
    <string name="user_register">用户注册</string>
    <string name="resure">注册</string>
    <string name="reuser">账号：</string>
    <string name="userName_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="re_pwd_empty">校验密码为空，请重新输入！</string>
    <string name="username_already_exist">该用户名已经被注册了，请从新输入！</string>
    <string name="register_fail">注册失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="user_login">用户登录</string>
    <string name="user_login_sucess">用户登录成功</string>
    <string name="login_fail">登录失败，请重新输入！</string>
</resources>