<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/user_login_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/red"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@color/red"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/user_login"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/user_login_bar"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/loginuser"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearlayout2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/login_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout3"
        >
        <Button 
            android:id="@+id/login_button"
            android:layout_width="310dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/red"
            />
    </LinearLayout>
</RelativeLayout>